--- a/admin/G-best-u6555078.md
+++ b/admin/G-best-u6555078.md
@@ -5,7 +5,7 @@ I submit the following for assessment as my best codes.
 
 I declare that this is entirely my own work, with the following documented exceptions:
 
-* The idea of <using suitable data structure> came from a discussion with <Chengji Yang,Chang Liu,Pengxiang Hao>
+* The idea of using suitable data structure came from a discussion with <Chengji Yang,Chang Liu,Pengxiang Hao>
 
 Signed: Chi Ben (u6555078)
 
