--- a/admin/G-best-u6555078.md
+++ b/admin/G-best-u6555078.md
@@ -1,7 +1,7 @@
 I submit the following for assessment as my best codes.
 
-* The method placementToOccupation(String placement, char[][] board)  in class WarringStatesGame.
-* The method generateMove(String placement) in class WarringStatesGame.
+* The method isMoveLegal(String placement, char locationChar), including a called method placementToOccupation(String placement, char[][] board)  in class WarringStatesGame.
+* The method generateMove(String placement) ，including two called methods generateMaxMoves(String placement) and generateNextMinMoves(String placement) in class WarringStatesGame.
 
 I declare that this is entirely my own work, with the following documented exceptions:
 
